# torch-switch-transformers

./: .gitignore  README.md  pyproject.toml  readme.md
src/: init.py  switch_transformer.py
switch_transformers/: __init__.py  switch_transformer.py  utils.py
