[tool.poetry]
name = "switch-transformers"
version = "0.1.0"
description = "Sparse transformers via routing"
authors = ["srishti-git1110 <srishtigureja1110@gmail.com>"]
license = "\"MIT\""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.0.0"

[tool.poetry.group.dev.dependencies]
torch = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
